--- a/riverpodexercises/pubspec.yaml
+++ b/riverpodexercises/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   hooks_riverpod: ^2.0.2
   riverpod: ^2.0.2
   state_notifier: ^0.7.2+1
+  uuid: ^3.0.6
 
 dev_dependencies:
   flutter_lints: ^2.0.0
